Port plugin to work on Java 7
The current code uses java 8 features which cannot be used on
stable branches which are built with java 7.

Change-Id: I4b43e8847f347bcc40a6b52e0be28f919982300f